--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.16.0/css/okta-theme.css"
+      type="text/css"
+      rel="stylesheet"
+    />
 
     <title>Staff Portal</title>
   </head>
